--- a/B2BTender/WebRoot/jsp/frame/header.html
+++ b/B2BTender/WebRoot/jsp/frame/header.html
@@ -43,15 +43,13 @@ $(document).ready(function() {
 	<div id="banner"><h1>后台管理登录</h1></div>
     <div id="nav">
     	<ul>
-        	<li class="inactive" id="other"><a href="menu.html" target="menu">管理操作</a></li>
-            <li class="inactive" id="about"><a href="menu.html" target="menu">管理操作</a></li>
-            <li class="inactive" id="user"><a href="menu.html" target="menu">管理操作</a></li>
-            <li class="inactive" id="news"><a href="menu.html" target="menu">管理操作</a></li>
-            <li class="inactive" id="mars"><a href="menu.html" target="menu">管理操作</a></li>
-            <li class="inactive" id="jielong"><a href="menu.html" target="menu">管理操作</a></li>
-            <li class="inactive" id="box"><a href="menu.html" target="menu">管理操作</a></li>
-            <li class="inactive" id="school"><a href="menu.html" target="menu">火柴学堂</a></li>
-            <li class="active" id="config"><a href="menu.html" target="menu">站点设置</a></li>
+            <li class="inactive" id="box"><a href="menu.html" target="menu">帮助信息</a></li>
+            <li class="inactive" id="jielong"><a href="menu.html" target="menu">系统日志</a></li>
+            <li class="inactive" id="mars"><a href="menu.html" target="menu">企业资料</a></li>
+            <li class="inactive" id="news"><a href="menu.html" target="menu">历史记录</a></li>
+            <li class="inactive" id="user"><a href="menu.html" target="menu">招标追踪</a></li>
+            <li class="inactive" id="about"><a href="menu.html" target="menu">招标管理</a></li>
+        	<li class="inactive" id="other"><a href="../zbfb/zbfb.jsp" target="menu">招标发布</a></li>
         </ul>
     </div>
     <div id="main">
